# 444Radio

./: .deployment-trigger-$(Get-Date -Format 'yyyyMMdd-HHmmss').txt  .deployment-trigger-20251116-120614.txt  .env.example  .gitignore  .gitmodules  .vercel-redeploy  .vercel-trigger.txt  .vercelignore  ACE-STEP-COMPLETE.md  ACE-STEP-FIX.md  ADD-BRAND-LOGO.md  ADD_USER_ID_TO_MUSIC_LIBRARY.sql  ADMIN-DASHBOARD-ANALYSIS-AND-ROADMAP.md  ADMIN-DASHBOARD-DEPLOYMENT-GUIDE.md  ADMIN-DASHBOARD-IMPLEMENTATION-SUMMARY.md  AI-GENERATION-SYSTEM.md  AIODE-REDESIGN-COMPLETE.md  ARCHITECTURE.md  AUTOMATED-SUBSCRIBER-SYNC.md  BULLETPROOF_CREDIT_TRACKING.md  CHECK-TRANSACTION-TYPES.sql  CHECK_ACTUAL_SONG_COUNT.sql  CHECK_ALL_TABLES.sql  CHECK_AND_RESTORE_AGAIN.sql  CHECK_COMBINED_MEDIA_LIBRARY.sql  CHECK_COMBINED_MEDIA_LIBRARY_STRUCTURE.sql  CHECK_DATA_EXISTS.sql  CHECK_FOLLOWS_ONLY.sql  CHECK_LIKES_TABLE.sql  CHECK_MUSIC_LIBRARY_CONSTRAINTS.sql  CHECK_ORPHANED_AUDIO.md  CHECK_SONGS_TABLE_FOR_101WORLD.sql  CHECK_TABLE_COLUMNS.sql  CHECK_USER_IDS.sql  CHORDS-IMPLEMENTATION.md  CLOUDFLARE_R2_SETUP.md  CODE-ANALYSIS.md  CODE_VERIFICATION.md  COMPLETE-DEPLOYMENT.md  COMPLETE-SETUP.md  (+308 more)
.github/: copilot-instructions.md  raag-knowledge-multi-track.md
.github/workflows/: ci.yml
444radio-plugin/: BUILDING.md  CMakeLists.txt  upload-to-r2.js  upload-v3-to-r2.js
444radio-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
444radio-plugin/fresh/: README.txt
444radio-plugin/fresh/444 Radio.vst3/Contents/Resources/: moduleinfo.json
444radio-plugin/fresh/444 Radio.vst3/Contents/x86_64-win/: 444 Radio.vst3
app/: globals.css  layout.tsx  manifest.ts  page-final.tsx  page-from-git.tsx  page-from-git.txt  page-new.tsx  page-old-backup.tsx  page-simple.tsx  page.tsx  page_backup.tsx  page_temp.tsx  sitemap.ts
app/adminrizzog/: page.tsx
app/assistant/: page.tsx
app/billboard/: page.tsx
app/community/: page.tsx
app/components/: AccessibleButton.tsx  AnimatedBackground.tsx  AudioBoostModal.tsx  AutotuneModal.tsx  BannerUploadModal.tsx  BeatMakerModal.tsx  BlackholeBackground.tsx  ChessChallengeModal.tsx  ChessGame.tsx  CombineMediaModal.tsx  CombinedMediaPlayer.tsx  CompletionModal.tsx  ConditionalGlobalPlayer.tsx  ConsoleBlocker.tsx  CoverArtGenModal.tsx  CoverArtGenerationModal.tsx  CoverArtModal.tsx  CoverVideoGenerationModal.tsx  CreatePostModal.tsx  CreditBadge.tsx  CreditIndicator.tsx  DeletedChatsModal.tsx  DockedSidebar.tsx  DraggableQueue.tsx  EffectsGenerationModal.tsx  EnhancedTrackCard.tsx  ErrorBoundary.tsx  FMTuner.tsx  FeaturesSidebar.tsx  FloatingAudioPlayer.tsx  FloatingGenres.tsx  FloatingMediaPreview.tsx  FloatingMenu.tsx  FloatingNavButton.tsx  GenerationModal.tsx  GenerationMonitor.tsx  GenerationRecovery.tsx  GlobalAudioPlayer.tsx  HolographicBackground.tsx  HolographicBackgroundClient.tsx  (+55 more)
app/contexts/: AudioPlayerContext.tsx  CreditsContext.tsx  GenerationQueueContext.tsx  StudioContext.tsx  UniversalPlayerContext.tsx
app/create/: page.tsx
app/creator-v2/: page.tsx
app/decrypt/: page.tsx
app/earn/: page.tsx
app/explore/: page-new.tsx  page-old.tsx  page.tsx  page.tsx.backup
app/holographic-demo/: page.tsx
app/hooks/: useEscapeKey.ts  useUserSync.ts
app/input/: page.tsx
app/manifest.json/: route.ts
app/matrix/: page.tsx
app/music/: page.tsx
app/plugin/: layout.tsx  page.tsx
app/pricing/: page-new.tsx  page-old.tsx  page.tsx
app/profile/: page.tsx
app/quests/: page-backup.tsx  page.tsx
app/radio/: page.tsx
app/settings/: page.tsx
app/station/: page.tsx
app/stations/: page.tsx
app/studio/: page.tsx
app/subscribe/: page.tsx
app/test-3d/: page.tsx
app/visuals/: page.tsx
app/voice-labs/: page.tsx
app/voice-training/: page.tsx
components/: ErrorBoundary.tsx  Header.tsx
db/: manual_subscription_activation.sql
db/migrations/: 001_add_last_444_radio_date.sql  002_add_likes_to_combined_media.sql  003_add_banner_to_users.sql  003_add_is_live_to_users.sql  003_add_lyrics_to_combined_media.sql  (+140 more)
docs/: AUDIOMASS-ARCHITECTURE.md  AUDIOMASS-CLIPS-SYSTEM.md  CREDITS-AUDIT-TABLE.md  GENERATION-QUEUE-SYSTEM.md  IS_PUBLIC_FIX.md  MOBILE-TESTING.ts  MULTI-TRACK-IMPLEMENTATION-PLAN.md  RELEASE_VISIBILITY_VERIFICATION.md  SMART-LYRICS-MATCHING.md
e2e/: studio.spec.ts
hooks/: useMultiTrack.optimized.ts  useMultiTrack.ts  useStudioGeneration.ts  useWaveSurfer.ts
lib/: accessibility.ts  activity-logger.ts  apiHelpers.ts  audio-clip-engine.ts  audio-effects.ts  audio-fingerprint.ts  audio-mixdown.ts  audio-scheduler.ts  audio-signing.ts  audio-utils.ts  boost-logs.ts  chat.ts  chess-engine.ts  console-suppressor.ts  constants.ts  cors.ts  credit-transactions.ts  default-lyrics.ts  design-system.ts  fx-presets.ts  hybrid-auth.ts  language-hooks.ts  lyrics-database.ts  lyrics-matcher.ts  media-trimmer.ts  metadata.ts  minimax-v2-validation.ts  mp3-encoder.ts  notifications.ts  ownership-engine.ts  pitch-detection.ts  plugin-auth.ts  pusher-client.ts  pusher-server.ts  quest-progress.ts  r2-upload.ts  rate-limit.ts  refund-credits.ts  renderWaveform.ts  replicate-retry.ts  (+18 more)
public/: 1_1_thm2_rxl1.webm  audio-worklet-processor.js  generate-favicon.html  manifest.json  robots.txt  suppress-console.js
scripts/: README.md  add-lyrics-column-direct.js  add-lyrics-column.js  apply-rate-limit-fix.js  backfill-activity-logs.js  cancel-all-subscriptions.js  check-lyrics-status.js  check-user-tracks.sql  clean-expired-replicate-urls.js  cleanup-sql-files.ps1  convert-examples.js  create-boost-logs.js  create-notifications-table.js  fix-is-public.ps1  generate-seed-songs.ts  list-r2-audio.js  migrate.mjs  run-migrations.js  run-supabase-migrations.js  seed-songs.json  seed-test-notification.js  sync-razorpay-subscribers.ts  test-r2-connection.js  verify-lyrics-columns.js  write-sonauto-routes.js
supabase-migrations/: add-metadata-columns.sql  create-users-table.sql
types/: media.ts  sentry.d.ts  simple-peer.d.ts  strudel.d.ts  superdough.d.ts
workers/: README.md  audio-worker.js  package.json  wrangler.toml
(+415 files in other folders)
